# Job_Hunt_ai

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  PRD.md  PROJECT_CONTEXT.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_create_jobs_table.py  0003_domain_tables.py
backend/: main.py
backend/ai/: __init__.py  career_assistant.py  career_enhancements.py  client.py  cover_letter.py  evaluation.py  matching.py  pdf_generator.py  resume.py  skill_gap.py
backend/api/: router.py
backend/automation/: __init__.py  directory_scraper.py  email_scraper.py  email_validator.py  it_company_scraper.py  observability.py  reliability.py  security.py  startup_finder.py
backend/config/: constants.py  settings.py
backend/core/: auth.py  dependencies.py  exceptions.py  middleware.py  rate_limit.py  request_id.py  security.py
backend/database/: engine.py  session.py
backend/events/: __init__.py
backend/models/: __init__.py  application.py  base.py  company.py  job.py  location.py  notification.py  platform.py  resume.py  scrape_log.py  settings.py  technology.py  user.py  watchlist.py
backend/notifications/: __init__.py  email.py  telegram.py
backend/repositories/: __init__.py  application.py  base.py  company.py  infrastructure.py  job.py  notification.py  resume.py  technology.py  user.py
backend/schemas/: base.py  job.py  user.py
backend/scrapers/: __init__.py
backend/services/: __init__.py  analytics.py  application.py  base.py  company.py  interfaces.py  job.py  notification.py  resume.py  search.py  settings.py
backend/storage/: __init__.py
backend/utils/: hashing.py  logging.py  metrics.py  validation.py
backend/workers/: celery_app.py
docker/: Dockerfile.dev  Dockerfile.frontend  docker-compose.yml
docs/: ADDING_SOURCES.md  AI_PRODUCTION_READINESS.md  AUTOMATION_PLATFORM.md  AUTOMATION_READINESS.md  SCRAPER_FRAMEWORK.md  SERVICES.md
frontend/: package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/components/: ai-assistant-panel.tsx  app-layout.tsx  charts.tsx  email-hr-button.tsx  it-companies.tsx  location-cards.tsx  ui.tsx  (+5 more)
scripts/: dev.sh  lint.sh  migrate.sh  start.sh  test.sh  validate_scraper.py
tests/: conftest.py  test_ai_evaluation.py  test_assist.py  test_ats_adapters.py  test_automation.py  test_automation_hardening.py  test_edge_cases.py  test_health.py  test_intelligence.py  test_models.py  test_repositories.py  test_services.py
(+121 files in other folders)
