[project]
name = "job-hunting-ai"
version = "0.1.0"
description = "AI-powered Job Intelligence & Application Automation Platform"
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"

dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "httpx>=0.28",
    "playwright>=1.49",
    "selectolax>=0.3",
    "beautifulsoup4>=4.12",
    "pymupdf>=1.25",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
ai = [
    "sentence-transformers>=3.3",
]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
]
all = [
    "job-hunting-ai[ai,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.per-file-ignores]
"backend/api/v1/*.py" = ["B008"]
"backend/scrapers/orchestrator/orchestrator.py" = ["RUF006"]
"backend/services/application.py" = ["RUF006"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "redis.*", "selectolax.*", "bs4.*", "fitz.*", "email_validator.*", "yaml.*", "playwright.*", "boto3.*", "prometheus_client", "tiktoken"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short -m 'not network and not db'"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "network: tests that require live internet access",
    "db: tests that require a running PostgreSQL + Redis",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
